Set MAVEN JVM memory size
Set the appropriate JVM memory sizes or else the build blows up with a OOM error.